# spider-web-py

./: .gitignore  README.md
spider-web/: pyproject.toml
spider-web/docs/: conf.py  index.rst
spider-web/docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  src.doctree  tests.doctree
spider-web/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html  tests.html
spider-web/docs/_build/html/_modules/: index.html
spider-web/docs/_build/html/_modules/src/: spider_web.html  spider_web_node.html
spider-web/docs/_build/html/_sources/: modules.rst.txt  src.rst.txt
spider-web/src/: main.py  spider_web.py  spider_web_node.py
spider-web/tests/: spider_web_node_test.py  spider_web_test.py
